test/files/neg/t1355.scala
trait A[T <: A[A[T]]]